# redis-keyspace-stats

./: Cargo.toml  README.md
.github/actions/setup/: action.yaml
.github/workflows/: push.yml  test.yml
src/: config.rs  data.rs  main.rs  metadata.rs  output.rs  parse_args.rs  sample.rs  sampling.rs  seed.rs  stats.rs
src/data/: get_data.rs  keys.rs  math.rs  memory.rs  other.rs  ttl.rs  types.rs
src/output/: stdout_table.rs  table.rs
src/sampling/: sample.rs  sample_all.rs  sample_random.rs
