[package]
name = "redis-keyspace-stats"
version = "0.5.1"
authors = ["Scott Hardy <scott.the.hardy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Analyzes your Redis keyspace and returns statistics about it"
readme = "README.md"
repository = "https://github.com/scott113341/redis-keyspace-stats"
keywords = ["redis"]
categories = ["command-line-utilities", "database", "development-tools::profiling"]

[dependencies]
glob = "*"
humantime = "*"
pretty-bytes = "*"
prettytable-rs = "*"
rand = "*"
redis = "*"
regex = "*"

[dependencies.clap]
version = "*"
features = ["derive"]
