[package]
name = "redis-keyspace-stats"
version = "0.5.2"
authors = ["Scott Hardy <scott.the.hardy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Analyzes your Redis keyspace and returns statistics about it"
readme = "README.md"
repository = "https://github.com/scott113341/redis-keyspace-stats"
keywords = ["redis"]
categories = ["command-line-utilities", "database", "development-tools::profiling"]

[dependencies]
glob = "0.3.*"
humantime = "2.*"
pretty-bytes = "0.2.*"
prettytable-rs = "0.9.*"
rand = "0.8.*"
redis = "0.21.*"
regex = "1.*"

[dependencies.clap]
version = "4.*"
features = ["derive"]
